--- a/HLD/1. Basic/3. General.ipynb
+++ b/HLD/1. Basic/3. General.ipynb
@@ -115,6 +115,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fault tolerance vs Partition tolerance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Feature                 | Fault Tolerance                       | Partition Tolerance                      |\n",
+    "| ----------------------- | ------------------------------------- | ---------------------------------------- |\n",
+    "| **Type of Failure**     | Node or hardware failure              | Network failure/split                    |\n",
+    "| **Focus**               | Keeps running despite component crash | Keeps running despite communication loss |\n",
+    "| **Example**             | One server in a cluster dies          | Cluster nodes can’t communicate          |\n",
+    "| **Typical Technique**   | Replication, failover                 | Eventual consistency, quorum mechanisms  |\n",
+    "| **CAP Theorem Context** | Not part of CAP directly              | Is one of the CAP properties             |\n",
+    "\n",
+    "\n",
+    "Fault tolerance = survives internal node failures\n",
+    "\n",
+    "Partition tolerance = survives network failures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
